fdo#61060 - Freeze and unfreeze now mark document as unsaved.

Change-Id: Ie1377e42430a6608c0d316d5bf1f2a2dd2f35df9